@@ -1,4 +1,6 @@
 DIST PacketTracer52.tar.gz 92711603 RMD160 6382c7f5d1286f0335a07178a7b29dc043ef3600 SHA1 469a2e064808ad0a5b86aa9efbea8d3419bbb90d SHA256 c35d68e5143fd1b424764161cd97a3c7366880f9b732a87c31d06eea1f8fc03b
+DIST PacketTracer521.tar.gz 93357690 RMD160 7b5d73104a3d2490cf87726cb1583e4218cdd437 SHA1 3a345fcba05fdecb825259762e841cb5dbe99720 SHA256 86d751139575bdd904698a059167adc0d88c954dde846ae642fe7ad37f51932e
 EBUILD packettracer-52.ebuild 2933 RMD160 8112533b1bf2c749b5175cc0b5605415d3e488df SHA1 63b5f61e8d813310d42d4514e50cccefdecdce29 SHA256 3df00d25b3227c1964ef347707a222ec97d472d676142dfaf30ca98d4043fb13
-MISC ChangeLog 1420 RMD160 7a2f780e09cf114683ff44f60ed8941ba9eb43bf SHA1 62fb5119e97f539d9857c4502b0f319964ea5f37 SHA256 9c1be985bf343bd3796b6bf2c45b92ca0a8153b52d5377121fb8aa4c65b0586e
+EBUILD packettracer-521.ebuild 2927 RMD160 4a4f3090f5e3c05a233c5df4525c13eea35525c0 SHA1 d6237253faa4dbd6869c688767ac65f80dc174a6 SHA256 7ca749b06cd4a3b74cb1db22c2e7b038130d11f8dd583d5d4a71b9fcf8b1e2ea
+MISC ChangeLog 1516 RMD160 ec85ef0cb51416fb4654ecc73fe0830b2c68c1b8 SHA1 46c1b83c9d528750ab79c4fa6518c82da4d0fb2d SHA256 29f6c3cc62d306733f4c02cdfd65993340446eb8f6718b57622348ad34ba63c4
 MISC metadata.xml 604 RMD160 d1b88107696f095f674c79d5b4512302af968eb1 SHA1 c91467f615e608f09b68048fa9bd1ecdb8975aae SHA256 de013db7d9e6f363aa6b0f79e967ddb646a10042eb673075dc905417f4d021c3
